<resources>
    <string name="app_name">Delivery_Fit</string>

    //dashboard
    <string name="title_home">Home</string>
    <string name="title_dashboard">Owner</string>
    <string name="title_notifications">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="title_track">Track</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="search">Search...</string>
    <string name="add">ADD</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track">Track</string>
    <string name="maps_api_key">AIzaSyCzeCigMhYFV9wx6kQuHmuuZhmm7aD487Y</string>
    <string name="track_and_checkpoint">Track and Checkpoint</string>
    <string name="captain">Captain</string>
</resources>