<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.delivery_fit.Dashboard.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_track"
        android:name="com.example.delivery_fit.Dashboard.track.TrackFragment"
        android:label="@string/track"
        tools:layout="@layout/fragment_track" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.delivery_fit.Dashboard.owner.OwnerFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.delivery_fit.Dashboard.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.delivery_fit.Dashboard.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" />

</navigation>